--- a/app.json
+++ b/app.json
@@ -42,18 +42,13 @@
     "FLUSH": {
       "description": " Make it 'true' if bot connected but not responed (After deployement!)",
       "required" :false,    
-      "value": "true"
+      "value": "false"
     }, 
     "WARN_COUNT": {
       "description": " Warn count for users to kick/block when warn limit exceed!",
       "required" :false,    
       "value": "3"
-    }, 
-    "READ_COMMAND": {
-      "description": " Read bot cmds",
-      "required" :false,    
-      "value": "false"
-    }, 
+    },  
     "AUTO_SAVE_STATUS": {
       "description": " Auto save whatsapp status", 
       "required" :false,   
@@ -80,7 +75,7 @@
       "value": "true"
     }, 
     "MSGS_IN_LOG": {
-      "description": "Fill the value true if you want to see Messages in Console.",
+      "description": "Fill the value -true- if you want to see Messages in logs.",
       "required" :false,
       "value": "false"
     },
