--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
    "name": "suhail-md",
-   "version": "1.2.9",
+   "version": "1.3.0",
    "description": "Multi device whatsapp bot by SuhailTechInfo.",
-   "main": "lib/smd.js",
+   "main": "index.js",
    "type": "commonjs",  
    "scripts": {
-            "run": "pm2 start lib/smd.js --deep-monitoring --attach --name Suhail || node lib/smd.js",
-            "start": "pm2 start lib/smd.js --attach --name Suhail || node lib/smd.js",
-            "stop": "pm2 stop Suhail",
-            "heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && mv temp1/.git .git && rm -rf temp1"
+            "run": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
+            "start": "pm2 start . --attach --name Suhail",
+            "stop": "pm2 stop Suhail"
    },
    "author": "SuhailTechInfo",
    "license" :"Apache-2.0",
