--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
    "name": "suhail-md",
-   "version": "1.3.1",
+   "version": "1.3.4",
    "description": "Multi device whatsapp bot by SuhailTechInfo.",
    "main": "index.js",
    "type": "commonjs",  
    "scripts": {
             "run": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
+            "suhail": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
             "start": "pm2 start . --attach --name Suhail",
-            "stop": "pm2 stop Suhail"
+            "stop": "pm2 stop Suhail",
+            "heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install"
+            "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
+            "postinstall": "npx puppeteer@latest install"
    },
    "author": "SuhailTechInfo",
    "license" :"Apache-2.0",
-   "dependencies": { 
+   "dependencies": {
              "@adiwajshing/keyed-db": "^0.2.4",
              "@hapi/boom": "^9.1.4",
              "@whiskeysockets/baileys": "6.6.0",             
@@ -58,13 +62,12 @@
              "wa-sticker-formatter": "^4.3.2",
              "youtubei.js": "^7.0.0",
              "ytdl-secktor": "^0.0.1-development",
-             "link-preview-js": "^3.0.0"
+             "link-preview-js": "^3.0.0",
+            "puppeteer": "latest"
    },
    "directories": {
       "lib": "lib",
-      "assets": "lib/assets",
       "plugins" :"plugins"
-
    },
    "devDependencies": {
       "pino": "^7.0.5"
