--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
             "suhail": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
             "start": "pm2 start . --attach --name Suhail",
             "stop": "pm2 stop Suhail",
-            "heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install",
+            "heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
             "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
-            "postinstall": "npx puppeteer@latest install"
+            "postinstall": "npx puppeteer@latest install --y"
    },
    "author": "SuhailTechInfo",
    "license" :"Apache-2.0",
