--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "suhail-md",
+   "name": "MBUVI-md",
    "version": "1.3.7",
    "description": "Multi device whatsapp bot.",
    "main": "index.js",
@@ -13,7 +13,7 @@
             "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
             "postinstall": "npx puppeteer@latest install --y"
    },
-   "author": "SuhailTechInfo",
+   "author": "MBUVI",
    "license" :"Apache-2.0",
    "dependencies": {
              "@adiwajshing/keyed-db": "^0.2.4",
@@ -74,8 +74,8 @@
    },
    "repository": {
       "type": "git",
-      "url": "git+https://github.com/SuhailTechInfo/Suhail-Md.git"
+      "url": "git+https://github.com/cheekydavy/Beta-Md.git"
    },
-   "bugs": { "url": "https://github.com/SuhailTechInfo/Suhail-Md/issues" },
-   "homepage": "https://github.com/SuhailTechInfo/Suhail-Md#readme"
+   "bugs": { "url": "https://github.com/cheekydavy/Beta-Md/issues" },
+   "homepage": "https://github.com/cheekydavy/Beta-Md#readme"
 }
