--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
    },
    "repository": {
       "type": "git",
-      "url": "git+https://github.com/cheekydavy/Beta-Md.git"
+      "url": "git+https://github.com/cheekydavy/Mbuvi-Md.git"
    },
-   "bugs": { "url": "https://github.com/cheekydavy/Beta-Md/issues" },
-   "homepage": "https://github.com/cheekydavy/Beta-Md#readme"
+   "bugs": { "url": "https://github.com/cheekydavy/Mbuvi-Md/issues" },
+   "homepage": "https://github.com/cheekydavy/Mbuvi-Md#readme"
 }
