--- a/app.json
+++ b/app.json
@@ -112,7 +112,7 @@
       "required": false 
     }
   }, 
-  "addons": [{ "plan": "heroku-postgresql:basic" }],
+  "addons": [{ "plan": "heroku-postgresql:essential 1" }],
   "buildpacks": [
     { "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" },
     { "url": "https://github.com/carlosdommor/heroku-buildpack-ffmpeg-latest" }
